fix: fix auto zoom screen on mobile

--- a/style.css
+++ b/style.css
@@ -869,7 +869,7 @@ input:focus-visible,
   }
   select,
   input {
-    font-size: 0.95em;
+    font-size: 16px;
     padding: 9px;
   }
   .btn {
@@ -942,7 +942,7 @@ input:focus-visible,
   }
   select,
   input {
-    font-size: 0.85em;
+    font-size: 16px;
     padding: 8px;
   }
   .btn {
